--- a/App2/App2.iOS/App2.iOS.csproj
+++ b/App2/App2.iOS/App2.iOS.csproj
@@ -107,6 +107,7 @@
     </ItemGroup>
     <ItemGroup>
         <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
+        <PackageReference Include="Xamarin.Essentials" Version="1.6.0-pre3" />
         <PackageReference Include="Xamarin.Forms" Version="4.4.0.991640" />
     </ItemGroup>
     <ItemGroup>
